# stable-diffusion

./: .gitignore  flake.nix  freeze.txt  pyproject.toml
scripts/: dream.py
scripts/orig_scripts/: img2img.py  txt2img.py
