[tool.poetry]
name = "stable-diffusion"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "stable_diffusion"}]

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
default = false
secondary = true

[[tool.poetry.source]]
name = "torch-repo"
url = "https://download.pytorch.org/whl/nightly/cpu"
default = false
secondary = true

[tool.poetry.dependencies]
python = ">=3.8.13,<3.12.0,!=3.9.7"
absl-py = { version = "== 1.2.0", source = "pypi-public" }
accelerate = { version = "== 0.12.0", source = "pypi-public" }
aiohttp = { version = "== 3.8.1", source = "pypi-public" }
aiosignal = { version = "== 1.2.0", source = "pypi-public" }
albumentations = { version = "== 0.4.3", source = "pypi-public" }
altair = { version = "== 4.2.0", source = "pypi-public" }
antlr4-python3-runtime = { version = "== 4.8", source = "pypi-public" }
async-timeout = { version = "== 4.0.2", source = "pypi-public" }
atomicwrites = { version = "== 1.4.0", source = "pypi-public" }
attrs = { version = "== 22.1.0", source = "pypi-public" }
"backports.zoneinfo" = { version = "== 0.2.1", source = "pypi-public" }
blinker = { version = "== 1.5", source = "pypi-public" }
cachetools = { version = "== 5.2.0", source = "pypi-public" }
certifi = { version = "== 2022.6.15", source = "pypi-public" }
cffi = { version = "== 1.15.0", source = "pypi-public" }
chardet = { version = "== 4.0.0", source = "pypi-public" }
charset-normalizer = { version = "== 2.1.1", source = "pypi-public" }
clean-fid = { version = "== 0.1.28", source = "pypi-public" }
click = { version = "== 8.1.3", source = "pypi-public" }
clip = { git = "https://github.com/openai/CLIP", rev = "d50d76daa670286dd6cacf3bcd80b5e4823fc8e1" }
coloredlogs = { version = "== 15.0.1", source = "pypi-public" }
commonmark = { version = "== 0.9.1", source = "pypi-public" }
decorator = { version = "== 5.1.1", source = "pypi-public" }
Deprecated = { version = "== 1.2.13", source = "pypi-public" }
diffusers = { git = "https://github.com/huggingface/diffusers.git", rev = "60a147343f8931bb10d1a40e201b97ffee8978d4" }
docker-pycreds = { version = "== 0.4.0", source = "pypi-public" }
einops = { version = "== 0.3.0", source = "pypi-public" }
entrypoints = { version = "== 0.4", source = "pypi-public" }
filelock = { version = "== 3.8.0", source = "pypi-public" }
flatbuffers = { version = "== 2.0.7", source = "pypi-public" }
frozenlist = { version = "== 1.3.1", source = "pypi-public" }
ftfy = { version = "== 6.1.1", source = "pypi-public" }
future = { version = "== 0.18.2", source = "pypi-public" }
gitdb = { version = "== 4.0.7", source = "pypi-public" }
GitPython = { version = "== 3.1.24", source = "pypi-public" }
google-auth = { version = "== 2.11.0", source = "pypi-public" }
google-auth-oauthlib = { version = "== 0.4.6", source = "pypi-public" }
grpcio = { version = "== 1.48.1", source = "pypi-public" }
huggingface-hub = { version = "== 0.9.1", source = "pypi-public" }
humanfriendly = { version = "== 10.0", source = "pypi-public" }
idna = { version = "== 2.10", source = "pypi-public" }
imageio = { version = "== 2.9.0", source = "pypi-public" }
imageio-ffmpeg = { version = "== 0.4.2", source = "pypi-public" }
imgaug = { version = "== 0.2.6", source = "pypi-public" }
importlib-metadata = { version = "== 4.12.0", source = "pypi-public" }
importlib-resources = { version = "== 5.9.0", source = "pypi-public" }
invisible-watermark = { version = "== 0.1.5", source = "pypi-public" }
Jinja2 = { version = "== 3.1.2", source = "pypi-public" }
jsonmerge = { version = "== 1.8.0", source = "pypi-public" }
jsonschema = { version = "== 4.14.0", source = "pypi-public" }
kornia = { version = "== 0.6.7", source = "pypi-public" }
k-diffusion = { git = "https://github.com/crowsonkb/k-diffusion", rev = "4567328deec0f90a549dde53c1858cf7ed0140dd" }
latent-diffusion = { git = "https://github.com/CompVis/latent-diffusion", rev = "a506df5756472e2ebaf9078affdde2c4f1502cd4" }
Markdown = { version = "== 3.4.1", source = "pypi-public" }
MarkupSafe = { version = "== 2.1.1", source = "pypi-public" }
mathlibtools = { version = "== 1.1.0", source = "pypi-public" }
mpmath = { version = "== 1.2.1", source = "pypi-public" }
multidict = { version = "== 6.0.2", source = "pypi-public" }
networkx = { version = "== 2.6.3", source = "pypi-public" }
numpy = { version = "== 1.23.2", source = "pypi-public" }
oauthlib = { version = "== 3.2.0", source = "pypi-public" }
omegaconf = { version = "== 2.1.1", source = "pypi-public" }
onnx = { version = "== 1.12.0", source = "pypi-public" }
onnxruntime = { version = "== 1.12.1", source = "pypi-public" }
opencv-python = { version = "== 4.6.0.66", source = "pypi-public" }
opencv-python-headless = { version = "== 4.6.0.66", source = "pypi-public" }
packaging = { version = "== 21.3", source = "pypi-public" }
pandas = { version = "== 1.4.2", source = "pypi-public" }
pathtools = { version = "== 0.1.2", source = "pypi-public" }
Pillow = { version = "== 9.2.0", source = "pypi-public" }
pkgutil_resolve_name = { version = "== 1.3.10", source = "pypi-public" }
promise = { version = "== 2.3", source = "pypi-public" }
protobuf = { version = "== 3.19.4", source = "pypi-public" }
psutil = { version = "== 5.9.1", source = "pypi-public" }
pudb = { version = "== 2019.2", source = "pypi-public" }
pyarrow = { version = "== 9.0.0", source = "pypi-public" }
pyasn1 = { version = "== 0.4.8", source = "pypi-public" }
pyasn1-modules = { version = "== 0.2.8", source = "pypi-public" }
pycparser = { version = "== 2.20", source = "pypi-public" }
pydeck = { version = "== 0.8.0b1", source = "pypi-public" }
pyDeprecate = { version = "== 0.3.1", source = "pypi-public" }
pydot = { version = "== 1.4.2", source = "pypi-public" }
PyGithub = { version = "== 1.55", source = "pypi-public" }
Pygments = { version = "== 2.13.0", source = "pypi-public" }
PyJWT = { version = "== 2.2.0", source = "pypi-public" }
Pympler = { version = "== 1.0.1", source = "pypi-public" }
PyNaCl = { version = "== 1.4.0", source = "pypi-public" }
pyparsing = { version = "== 2.4.7", source = "pypi-public" }
pyrsistent = { version = "== 0.18.1", source = "pypi-public" }
python-dateutil = { version = "== 2.8.2", source = "pypi-public" }
pytorch-lightning = { version = "== 1.4.2", source = "pypi-public" }
pytz = { version = "== 2022.2.1", source = "pypi-public" }
pytz-deprecation-shim = { version = "== 0.1.0.post0", source = "pypi-public" }
PyWavelets = { version = "== 1.3.0", source = "pypi-public" }
PyYAML = { version = "== 6.0", source = "pypi-public" }
regex = { version = "== 2022.8.17", source = "pypi-public" }
requests = { version = "== 2.25.1", source = "pypi-public" }
requests-oauthlib = { version = "== 1.3.1", source = "pypi-public" }
resize-right = { version = "== 0.0.2", source = "pypi-public" }
rich = { version = "== 12.5.1", source = "pypi-public" }
rsa = { version = "== 4.9", source = "pypi-public" }
scikit-image = { version = "== 0.19.3", source = "pypi-public" }
scipy = { version = "== 1.9.1", source = "pypi-public" }
semver = { version = "== 2.13.0", source = "pypi-public" }
sentry-sdk = { version = "== 1.9.7", source = "pypi-public" }
setproctitle = { version = "== 1.3.2", source = "pypi-public" }
shortuuid = { version = "== 1.0.9", source = "pypi-public" }
six = { version = "== 1.16.0", source = "pypi-public" }
smmap = { version = "== 4.0.0", source = "pypi-public" }
streamlit = { version = "1.12.2", source = "pypi-public" }
sympy = { version = "== 1.11", source = "pypi-public" }
taming_transformers = { git = "https://github.com/CompVis/taming-transformers.git", rev = "24268930bf1dce879235a7fddd0b2355b84d7ea6" }
tensorboard = { version = "== 2.10.0", source = "pypi-public" }
tensorboard-data-server = { version = "== 0.6.1", source = "pypi-public" }
tensorboard-plugin-wit = { version = "== 1.8.1", source = "pypi-public" }
test-tube = { version = "== 0.7.5", source = "pypi-public" }
tifffile = { version = "== 2022.8.12", source = "pypi-public" }
tokenizers = { version = "== 0.12.1", source = "pypi-public" }
toml = { version = "== 0.10.2", source = "pypi-public" }
toolz = { version = "== 0.12.0", source = "pypi-public" }
torch-fidelity = { version = "== 0.3.0", source = "pypi-public" }
torchdiffeq = { version = "== 0.2.3", source = "pypi-public" }
torchmetrics = { version = "== 0.6.0", source = "pypi-public" }
torchvision = { version = "== 0.11.3", source = "pypi-public" }
tornado = { version = "== 6.2", source = "pypi-public" }
tqdm = { version = "== 4.62.3", source = "pypi-public" }
transformers = { version = "== 4.21.1", source = "pypi-public" }
typing_extensions = { version = "== 4.3.0", source = "pypi-public" }
tzdata = { version = "== 2022.2", source = "pypi-public" }
tzlocal = { version = "== 4.2", source = "pypi-public" }
urllib3 = { version = "== 1.26.12", source = "pypi-public" }
urwid = { version = "== 2.1.2", source = "pypi-public" }
validators = { version = "== 0.20.0", source = "pypi-public" }
wandb = { version = "== 0.13.2", source = "pypi-public" }
watchdog = { version = "== 2.1.9", source = "pypi-public" }
wcwidth = { version = "== 0.2.5", source = "pypi-public" }
Werkzeug = { version = "== 2.2.2", source = "pypi-public" }
wrapt = { version = "== 1.13.2", source = "pypi-public" }
yarl = { version = "== 1.8.1", source = "pypi-public" }
zipp = { version = "== 3.8.1", source = "pypi-public" }
matplotlib = { version = "*", source = "pypi-public" }
wheel = { version = "*", source = "pypi-public" }
colorama = { version = "*", source = "pypi-public" }
shapely = { version = "*", source = "pypi-public" }
cycler = { version = "*", source = "pypi-public" }
tomli = { version = "*", source = "pypi-public" }
fonttools = { version = "*", source = "pypi-public" }
kiwisolver = { version = "*", source = "pypi-public" }
fsspec = { git = "https://github.com/fsspec/filesystem_spec", rev = "025d846db553f7498c106326ac005656ebfa3bb7" }

torch = { version = "== 1.13.0.dev20221003", source = "torch-repo" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
